# media-pipeline

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
deploy/: edge.nginx.conf
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: configmap.yaml  namespaces.yaml  secret.yaml
deploy/k8s/: 00-namespace.yaml
deploy/k8s/services/: gateway.yaml  ingress.yaml  migrator.yaml  minio.yaml  notifier.yaml  postgres.yaml  rabbit.yaml  redis.yaml  web.yaml  worker.yaml
docs/: architecture.md  contracts.md  env-reference.md  k8s-learning-roadmap.md  smoke-test.md
docs/superpowers/plans/: 2026-06-24-media-pipeline.md
libs/contracts/: README.md  contracts.json
services/gateway/: .dockerignore  AGENTS.md  Dockerfile  README.md  broker.go  cache.go  config.go  go.mod  go.sum  handlers.go  handlers_test.go  health.go  integration_test.go  main.go  objstore.go  store.go
services/migrator/: .dockerignore  AGENTS.md  Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
services/notifier/: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
services/notifier/src/: broker.ts  (+4 more)
services/web/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
services/worker/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
services/worker/tests/: test_consumer.py  test_integration.py  test_processing.py
services/worker/worker/: clients.py  config.py  consumer.py  health.py  main.py  processing.py
(+18 files in other folders)
