[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pillow>=10", "pika>=1.3", "psycopg[binary]>=3.1", "redis>=5", "minio>=7.2"]
[project.optional-dependencies]
dev = ["pytest>=8", "testcontainers>=4"]
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests requiring Docker and live infrastructure"]
